<resources>

    <string name="app_name">PoS</string>
    <string name="hello_world">Hello world!</string>
    <string name="admin">Admin</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    
    <string name="products">PRODUCTS</string>
    <string name="add_new_product">Add New Product</string>
    <string name="change_product">Change or Delete</string>
    <string name="edit_layout">Edit Layout</string>
    
    <string name="product_add_title">Add New Product</string>
    <string name="product_description">Description:</string>
    <string name="product_description_hint">short description</string>
    <string name="product_code">Code:</string>
    <string name="product_code_hint">SKU</string>
    <string name="product_category">Category:</string>
    <string name="product_category_hint">optional</string>
    <string name="product_price">Price:</string>
    <string name="product_price_hint">in form xx.xx</string>
    <string name="product_tax">Tax:</string>
    <string name="product_icon">Icon Colour:</string>
    <string name="radio_yes">Yes</string>
    <string name="radio_no">No</string>
    <string name="product_cancel">Cancel</string>
    <string name="product_save">Save</string>
    
    <string name="reports">REPORTS</string>
    <string name="today_report">Today</string>
    <string name="month_report">This Month</string>
    <string name="date_report">by Date</string>
    
    <string name="settings">SETTINGS</string>
    <string name="email_setting">Email</string>
    <string name="users_setting">Users</string>
    <string name="taxes_setting">Taxes</string>
    <string name="more_setting">More..</string>

</resources>