<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    android:orientation="horizontal"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/products"
            android:textColor="#467467"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <Button
            android:id="@+id/product_add"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="#b0d0b0"
            android:text="@string/add_new_product"
            android:onClick="goAddProduct"
            android:textSize="12dip" />

        <Button
            android:id="@+id/product_change"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="#b0d0b0"
            android:text="@string/change_product"
            android:textSize="12dip" />

        <Button
            android:id="@+id/product_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="#b0d0b0"
            android:text="@string/edit_layout"
            android:textSize="12dip" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#808080" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/reports"
            android:textColor="#467467"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <Button
            android:id="@+id/report_today"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="#a09a09"
            android:text="@string/today_report"
            android:textSize="12dip" />

        <Button
            android:id="@+id/report_month"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="#a09a09"
            android:text="@string/month_report"
            android:textSize="12dip" />

        <Button
            android:id="@+id/report_date"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="#a09a09"
            android:text="@string/date_report"
            android:textSize="12dip" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#808080" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/settings"
            android:textColor="#467467"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <Button
            android:id="@+id/setting_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#a0b0e0"
            android:text="@string/email_setting"
            android:textSize="12dip" />

        <Button
            android:id="@+id/setting_users"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#a0b0e0"
            android:text="@string/users_setting"
            android:textSize="12dip" />

        <Button
            android:id="@+id/setting_taxes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#a0b0e0"
            android:text="@string/taxes_setting"
            android:textSize="12dip" />

        <Button
            android:id="@+id/setting_more"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#a0b0e0"
            android:text="@string/more_setting"
            android:textSize="12dip" />
    </LinearLayout>

</LinearLayout>